--- a/css/styles.css
+++ b/css/styles.css
@@ -21,11 +21,11 @@ body {
  .list {
     text-decoration: none;
     list-style: none;
-    color: var(--second-color);
-    
+    color: var(--second-color);    
  }
 
- .list:hover, .list:focus {
+ .list:hover, 
+ .list:focus {
    color: var(--special-color);
  }
  
