--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,7 @@
 
 
 body {
+  color: var(--main-text-color);
   background-color: #ffffff;
 
   font-family: 'Roboto', sans-serif;
@@ -86,6 +87,7 @@ body {
   letter-spacing: 0.06em;
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  cursor: pointer;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -246,6 +248,7 @@ body {
 .projects-list-button:focus {
   background-color: var(--special-color);
   color: #ffffff;
+  cursor:pointer;
 }
 
 /* GALLERY */
