--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,11 @@ body {
   color: var(--main-text-color);
  }
 
+ .header-contact-list .list:hover,
+ .header-contact-list .list:hover {
+  color: var(--special-color);
+ }
+
 
     /* ........................MAIN................... */
 
@@ -67,7 +72,7 @@ body {
   
 .hero {
   /* фон для наглядності */
-  background-color: aqua;
+  background-color: #2F303A;
 }
 
 .hero-title {
